Addressed most of the comments for the first 3 chapters

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1434,6 +1434,24 @@ month = {},
 year = {},
 url = {http://www.swi-prolog.org/pldoc/man?section=SyntaxAndSemantics}
 }
+@article{hindley1969principal,
+  title={The principal type-scheme of an object in combinatory logic},
+  author={Hindley, Roger},
+  journal={Transactions of the american mathematical society},
+  pages={29--60},
+  year={1969},
+  publisher={JSTOR}
+}
+@article{milner1978theory,
+  title={A theory of type polymorphism in programming},
+  author={Milner, Robin},
+  journal={Journal of computer and system sciences},
+  volume={17},
+  number={3},
+  pages={348--375},
+  year={1978},
+  publisher={Elsevier}
+}
 @comment{website:,
 title = ,
 author = ,
