--- a/introduction.tex
+++ b/introduction.tex
@@ -112,7 +112,7 @@ for search problems.
 \end{comment}
 
 \progLang{Prolog} is a language that has a hard time being adopted.
-Born in an era where procedural languages were receiving a lot of attention, it \xxx{suﬀered}{suffered}\endnote{%
+Born in an era where procedural languages were receiving a lot of attention, it suffered\endnote{%
   this looks like it has been cut and paste, not so sure
 } from competing against another
 new kid on the block: \progLang{C}.
@@ -128,33 +128,33 @@ It is a language that should not die away.
 
 So the question is how to have all the good qualities of \textsc{Prolog} without actually using \progLang{Prolog}?
 
-\yyy{Well o}{O}ne idea is to make \progLang{Prolog} an add-on to another language which is widely used and in demand.
+One idea is to make \progLang{Prolog} an add-on to another language which is widely used and in demand.
 Here the choice is \progLang{Haskell}; as both the languages are declarative they share a common background which can
 help to blend the two.
 
 Generally speaking, programming languages with a wide scope over problem domains do not provide bespoke support for
-accomplishing \xxx{even} mundane tasks.
+accomplishing  mundane tasks.
 Approaching towards the solution can be complicated and tiresome, but the programming language in question acts as the
 master key.\endnote{%
   The idea of this sentence is good, but the wording needs improvement.
 }%
-A general purpose language, as the name suggests\yyy{}{\large ,} provides a general set of tools to cover many
+A general purpose language, as the name suggests{\large ,} provides a general set of tools to cover many
 problem domains.
 The downside is that such environments lack focus and approaching towards the solution can be complicated and
 tiresome.
 
 
 Flipping the coin to the other side, we see, the more specific the language is to the problem domain, the easier it
-is to solve the problem.
-The simple reason being that, the problem need not be moulded according to the capability  of the
+is to solve the problem since it need not be moulded according to the capability  of the
 language.\endnote{%
   This preceding phrase is not a sentence.
 }\elabel{not-a-sentence}
-For example\yyy{}{,} a problem with a naturally recursive solution cannot take advantage of tail recursion in many
+For example, a problem with a naturally recursive solution cannot take advantage of tail recursion in many
 imperative languages.
 Many domains require the system to be mutation free, but must deal with uncontrolled side-effects and so
 on.\endnote{%
   This example isn't as clear to me as the one in the last sentence.
+  how do I say that mathematics can be translated to declarative easily in declarative paradigm 
 }\textsuperscript{,}\endnote{%
   Use ``must'' in place of ``have to'' where you can.
 }%
@@ -162,28 +162,26 @@ on.\endnote{%
 Putting all of the above together, Domain Specific Languages\endnote{%
   I have the feeling that you should introduce the concept of DSLs
   slightly higher.
+  higher ???
 }
 are pretty good in doing what they are designed to do,
 but nothing else, resulting in choosing a different language every time.
-On the other hand, a general purpose language can be used for solving a wide variety of problems but \yyy{many a
-  times,}{often} the programmer ends up writing some code dictated by the language rather than\yyy{}{ by} the
+On the other hand, a general purpose language can be used for solving a wide variety of problems but often the programmer ends up writing 
+some code dictated by the language rather than by the
 problem.
 
-The solution, a programming language with a split personality, in our case, sometimes functional, sometimes logical and sometimes
-both.\eref{not-a-sentence}
+The solution is to develop a programming language with a split personality, in our case, sometimes functional, sometimes logical and sometimes both.\eref{not-a-sentence}
 Depending upon the problem, the language shapes itself accordingly and exhibits the desired characteristics. The ideal situation is a
 language with a rich
-feature set and the ability to mould itself according to the problem. A language with ability to take the appropriate skill set and present
-it to the
-programmer, which will reduce the hassle of jumping between languages or forcibly trying to solve a problem according to a paradigm.\eref{not-a-sentence}
+feature set and the ability to mould itself according to the problem. A language with the ability to take the appropriate skill set and provide them to the programmer, which will reduce the hassle of jumping between languages or forcibly trying to solve a problem according to a paradigm.\eref{not-a-sentence}
 
 The subject in question here is \progLang{Haskell} and the split personality being \progLang{Prolog}. How far can \progLang{Haskell} be pushed to
-dawn the avatar of \progLang{Prolog}\xxx{ }?
-\yyy{}{This} is the million dollar question.\endnote{%
+don the avatar of \progLang{Prolog}?
+This is the million dollar question.\endnote{%
   ``To dawn the avatar''?  This is poetic.  Did you mean ``to don''?
 }
 
-The above\endnote{%
+A \progLang{Haskell} with \progLang{Prolog} like features\endnote{%
   Say what ``the above'' is.
 } will result in a set of characteristics which are from both the declarative paradigms.
 %----------------------------------------------------------------------------------------------------------------------
@@ -194,8 +192,8 @@ This can be achieved in two ways,
 \begin{description}
 \item [Embedding (\chapterReference{chap:embedding}{Chapter 4}):]
 
-  This approach involves\xxx{,} translating a complete language into the host language as an extension such as a
-  library \xxx{and/} or module\xxx{ }.
+  This approach involves translating a complete language into the host language as an extension such as a
+  library or module.
   The result is very shallow as all the positives as well as the negatives are brought into the host language.
   The negatives mentioned being, that languages from different paradigms usually have conflicting characteristics
   and result in inconsistent properties of the resulting embedding.
@@ -227,8 +225,8 @@ This can be achieved in two ways,
 %----------------------------------------------------------------------------
 \section{Thesis Organization}
 
-The next chapter, \chapterReference{chap:proposedWork}{Chapter 2} provides details about the short comings of the
-previous works and the road to a better future.\endnote{%
+The next chapter, \chapterReference{chap:proposedWork}{Chapter 2} provides details about the shortcomings of the
+previous works and an approach for improvements.\endnote{%
   ``Shortcomings'' is one word.
   ``the road to a better future'' is poetic, but too vague.
 }
@@ -242,7 +240,7 @@ Some of the indirectly related content \chapterReference{chap:relatedWork}{Chapt
 
 %\section{The Plan}
 
-\section{Chapter Recap\protect\yyy{}{itulation}}
+\section{Chapter Recapitulation}
 
 
 \end{document}
