--- a/background.tex
+++ b/background.tex
@@ -14,8 +14,8 @@
 
 -----------------------------------------------------------------------------
 
-Programming Languages fall into different categories also known as
-\yyy{"}{``}paradigms\yyy{"}{''}.\endnote{% There are two problems in this sentence:
+Programming languages fall into different categories also known as
+``paradigms''.\endnote{% There are two problems in this sentence:
   \begin{itemize}
   \item
     Why is ``Languages'' capitalized?
@@ -27,10 +27,10 @@ Programming Languages fall into different categories also known as
 } They exhibit different characteristics according to the paradigm they
 fall into.
 It has been argued \cite{Krishnamurthi:2008:TPL:1480828.1480846} that
-rather than classifying a language into a particular paradigm,\endnote{%
+rather than classifying a language into a particular paradigm\endnote{%
   comma splice.
 }
-it is
+Tt is
 more accurate that a language exhibits a set of characteristics from a
 number of paradigms.
 Either way, the broader the scope of a language the more the
@@ -51,15 +51,16 @@ and substitution.
 It can be thought as the smallest programming language \cite{rojas2004tutorial}, a single rule and a single
 function definition scheme.
 In particular there are typed and untyped $\lambda$ calculi.
-In the untyped $\lambda$ calculus functions have no predetermined type whereas\yyy{}{\large,} typed lambda calculus puts
+In the untyped $\lambda$ calculus functions have no predetermined type whereas{\large,} typed lambda calculus puts
 restriction on what sort(type) of data can a function work with.
-\progLang{Scheme} is based on the untyped variant\yyy{}{\large,} while \progLang{ML} and \progLang{ Haskell} are based on typed
+\progLang{Scheme} is based on the untyped variant{\large,} while \progLang{ML} and \progLang{Haskell} are based on typed
 $\lambda$ calculus.
 Most typed $\lambda$ calculus langauges are based on Hindley-Milner or Damas-Milner or Damas- Hindley-Milner
 \cite{website:hdmtypesystemwiki} type system.\endnote{%
   Can you find an article or book rather than a website as a reference here?
+  \cite{hindley1969principal}, \cite{milner1978theory}
 }
-The ability of the type system to give the most general type of a program without any help (annotation).\endnote{%
+The Hindley-Milner like type systems have the ability to give a most general type of a program without any annotations.\endnote{%
   This is a sentence fragment.  I think that you mean something like: \textsl{The Hindley-Milner like type systems
     have the ability to give a most general type of a program without any annotations.}
 }
@@ -67,6 +68,7 @@ The algorithm \cite{website:hdmtypesystem} works by initially assigning undefine
 the body of the function for operations that impose type constraints and go on mapping the types of each of the
 variables, lastly unifying all of the constraints giving the type of the result.\endnote{%
   What is the relevance of this \P{} to the thesis?
+  To explain the working, not directly required I guess but since \progLang{Haskell} is statically typed
 }
 
 Logical Programming, \cite{spivey1995introduction} on the other hand is based on formal logic.
@@ -83,6 +85,9 @@ Endnote\endnote{%
   \progLang{Prolog} and \progLang{Haskell}.
 }
 \textcolor{blue}{\rule{0.40\textwidth}{2pt}}
+In this thesis we aim to merge the two languages together and produce a result which would exhibit hybrid properties. Further on we talk
+about more about the languages in question and approaches . 
+
 \par
 
 The languages to be worked with being \progLang{Haskell} and \progLang{Prolog} respectively.\eref{not-a-sentence}
@@ -91,6 +96,12 @@ Unification, \progLang{Haskell} is all about functions while \progLang{Prolog} i
 on.\endnote{%
   This \P{} needs rewriting.
 }
+The languages in question are \progLang{Haskell} and \progLang{Prolog}. Some of the dissimilarities between the languages are,
+\begin{enumerate}
+\item { Haskell} uses Pattern Matching while \progLang{Prolog} uses Unification
+
+\item \progLang{Haskell} is all about functions while \progLang{Prolog} is on Horn Clause Logic
+\end{enumerate} 
 
 \progLang{Prolog} \cite{wikiprolog} being one of the most dominant Logic Programming Languages has 
 spawned a number of distributions and is present from academia to industry.  
@@ -107,6 +118,11 @@ typed.
 The languages taken up are contrasting in nature and bringing them onto the same plate is tricky. The 
 differences in typing, execution, working among others lead to an altogether mixed bag of properties.
 
+The target language; \progLang{Prolog} is not a uncommon choice. To prove their power, many language have implemented \cite{swipembedd} a 
+modified \progLang{Prolog} for example, \progLang{Scheme} \cite{racklog}, \progLang{Lisp}  
+\cite{komorowski1982qlog,robinson1982loglisp,robinson1980loglisp}, \progLang{Java} \cite{wikiprolog, jlog}, 
+\progLang{JavaScript} \cite{jscriptlog} and the list \cite{yieldprolog} goes on. 
+
 The selection of languages is not uncommon and this not only the case with \progLang{Haskell,\endnote{%
     I do not understand the sentence before the comma.
 }\textsuperscript{,}\endnote{%
@@ -119,13 +135,14 @@ languages like \progLang{Scheme} \cite{racklog}, \progLang{Lisp}
 \cite{komorowski1982qlog,robinson1982loglisp,robinson1980loglisp}, \progLang{Java} \cite{wikiprolog, jlog}, 
 \progLang{JavaScript} \cite{jscriptlog} and the list \cite{yieldprolog} goes on \xxx{and on}.    
 
-The technique of embedding is a shallow one,\endnote{%
+The technique of embedding is a shallow one.\endnote{%
   comma splice.
 }
-it is as if the embedded language floats over the host.\endnote{%
+It is as if the embedded language floats over the host.\endnote{%
   Now signal that you are switching directions:
   \textsl{Other approaches provide deeper integration}.
 }
+Other approaches provide deeper integration between the target and the host. Further on we look at a few.
 Over time there has been an approach that branches out, which is Paradigm Integration.
 A lot of work has been done on Unifying the Theories of Programming
 \cite{DBLP:conf/utp/2006,DBLP:conf/utp/2008,DBLP:conf/utp/2010,DBLP:conf/utp/2012,hoare1998unifying,
@@ -134,6 +151,8 @@ All sorts of hybrid languages which have characteristics from more than one para
 mainstream.\endnote{%
   Do you want to give the \progLang{Scala} here?
 }
+One of the more successful attempts is \progLang{Scala}\cite{website:scala}. Simply speaking it is like a \textit{functional} 
+\progLang{Java} providing side-effect free programming environment along with the \progLang{Java} like features.
 
 Before moving on, let us take a look at some terms related to the content above.
 To begin with Foreign Function Interfaces (FFI) \cite{website:ffiwiki}, a mechanism by which a program written in
@@ -159,16 +178,17 @@ If both of them are the same then the language is said to be reflective.\endnote
   I think that this usage of ``reflective'' needs some common.
   Usually \textit{reflective} refers to run-time access to information about the object language text;
   what you are discussing is compile-time access to the object language.
+  ?????
 }
-\progLang{Haskell} programs can be modified using Template \progLang{Haskell} \cite{website:templatehaskell} an
+\progLang{Haskell} programs can be modified using Template \progLang{Haskell} \cite{website:templatehaskell}, an
 extension to the language which provides services to jump between the two types of programs.
-The abstract syntax trees in the form of \progLang{Haskell} data types can be modified at compile time which
-playing with the code and going back and forth.\endnote{%
+The abstract syntax tree used to define a grammar is in the form of a \progLang{Haskell} data type which can be modified at compile time which allows playing with the code and going back and forth possible.\endnote{%
   The preceding sentence needs fixing.
+
 }
 
 A specific tool used in meta programming is quasi quotation \cite{mainland2007s,haskellquasi,wikiquasi},
-\yyy{}{which }permits
+which permits
 \progLang{Haskell} expressions and patterns to be constructed using domain specific, programmer-defined concrete
 syntax.
 For example, consider a particular application that requires a complex data type.
@@ -177,7 +197,7 @@ turn into a tedious task.
 So having the option of using specific syntax reduces the programmer from this burden and this is where a
 quasi-quoter comes into the picture.
 Template \progLang{Haskell} provides the facilities mentioned above.
-For example, consider the \yyy{following code}{code in Figure~\ref{fig:append-prolog}}
+For example, consider the code in Figure~\ref{fig:append-prolog}
 in \progLang{Prolog} to append two lists,
 \begin{figure}[h]
 \begin{minted}[linenos,frame=lines]{prolog}
@@ -192,6 +212,7 @@ going through the code, the first rule says that and empty list appended with an
 The second predicate matches the head of the first and the resulting lists and then recurs on the tails.
 The same in \progLang{Haskell},\endnote{%
   Is the point here that templating helps, or what?
+  it is just one of the many ways to bring the languages together
 }
 %\begin{minted}[linenos]{haskell}
 %append(Ps, Qs, Rs) = (Ps = [] & Qs = Rs) ||
@@ -201,16 +222,17 @@ The same in \progLang{Haskell},\endnote{%
 %\end{minted}  
 \inputminted[linenos]{haskell}{append.pl}
 
-Consider the Object Functional Programming Language, \progLang{Scala} \cite{website:scala},\endnote{%
+Consider the Object Functional Programming Language, \progLang{Scala} \cite{website:scala}\endnote{%
   comma splice.
 }\textsuperscript{,}\endnote{%
   Should this example be moved up to where you are discussing multi-paradigm languages?
+  Wrote something about \progLang{Scala} up there.
 }
 it is purely functional but with objects and classes.
 With the above in mind, coming back to the problem of implementing \progLang{Prolog} in \progLang{Haskell}.\endnote{%
   Sentence fragment.
 }
-There have been quite a few attempts to \yyy{"}{``}merge\yyy{"}{''} the two programming languages from different programming paradigms.
+There have been quite a few attempts to ``merge'' the two programming languages from different programming paradigms.
 The attempts fall into two categories as follows,
 
 \begin{enumerate}
@@ -226,6 +248,6 @@ The attempts fall into two categories as follows,
 The approaches listed above are next in line for discussions.  
 
 
-\section{Chapter Recap}
+\section{Chapter Recapitulation}
 
 \end{document}
