removed bad quote markers from proto3.

--- a/proto3.tex
+++ b/proto3.tex
@@ -56,7 +56,7 @@ import Prolog
 import st
 import Interact
 
-version = \yyy{"}{``}stack based\yyy{"}{''}
+version = "stack based"
 
 --- Calculation of solutions:
 
