--- a/toDo.tex
+++ b/toDo.tex
@@ -93,8 +93,6 @@
 \item [\textbf{David}]
 \item Clean up the non-exclusive license page in unbcthesis.cls
 \item Incorporate unbcthesis.cls into Mehul's work.
-\item Review Chapter 2
-\item Review Chapter 3
 \item Review Chapter 4
 \item Review Chapter 5
 \item Review Chapter 6
@@ -263,6 +261,8 @@ What is the overall message?
   \item
     many times
   \item
+    from time to time
+  \item
     \dots
   \end{compactitem}
   are not in themselves problematic, but sometimes can be replaced by
@@ -274,7 +274,15 @@ What is the overall message?
 \item
   job at hand
 \item
+  hot topic
+\item
   faded out (when used metaphorically).
+\item
+  to play with (when meaning ``to experiment with'').
+\item
+  adding fuel to the fire 
+\item
+  push the ideas forward (do you mean popularize?).
 \end{enumerate}
 
 \end{scope}
